--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "react": "^17.0.2",
     "react_ujs": "^2.6.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
@@ -13,6 +14,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "react-dom": "^17.0.2",
     "webpack-dev-server": "^3"
   }
 }
